--- a/index.html
+++ b/index.html
@@ -160,14 +160,10 @@
         border: 8px solid #facc15;/* The border for non-white backgrounds */
       }
       
-      .fai-chun.horizontal {
-        width: 90vw;              /* Use most of the screen width */
+      .fai-chun.horizontal {       /* Use most of the screen width */
         max-width: 70rem;         /* But don't let it get too wide */
         height: 5rem;            /* A generous height for large characters */
-        border: 8px solid #facc15;/* The border */
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        border: 8px solid #facc15;
       }
 
       .char-wrapper img {
