--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@
         max-width: 70rem;         /* But don't let it get too wide */
         height: 5rem;            /* A generous height for large characters */
         border: 8px solid #facc15;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
       }
 
       .char-wrapper img {
@@ -617,6 +621,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        overflow: hidden;
       }
       #fullscreenContent .fai-chun.vertical img {
           max-width: 100%;
