--- a/index.html
+++ b/index.html
@@ -650,14 +650,53 @@
         max-width: 90vw;          /* Ensures it never overflows the screen */
         border: 8px solid #facc15;/* The border for non-white backgrounds */
       }
-      
+
+#fullscreenContent .fai-chun.horizontal {
+  --char-count: 1; /* Default to 1 character */
+}
+
+/* 2. Use :has() to detect the number of grandchildren and update the variable.
+      This selector says: "If the .fai-chun element has a grandchild that is
+      the Nth child AND the last child, update the --char-count variable." */
+
+#fullscreenContent .fai-chun.horizontal:has(.char-wrapper:nth-child(1):last-child) {
+  --char-count: 1;
+}
+#fullscreenContent .fai-chun.horizontal:has(.char-wrapper:nth-child(2):last-child) {
+  --char-count: 2;
+}
+#fullscreenContent .fai-chun.horizontal:has(.char-wrapper:nth-child(3):last-child) {
+  --char-count: 3;
+}
+#fullscreenContent .fai-chun.horizontal:has(.char-wrapper:nth-child(4):last-child) {
+  --char-count: 4;
+}
+#fullscreenContent .fai-chun.horizontal:has(.char-wrapper:nth-child(5):last-child) {
+  --char-count: 5;
+}
+#fullscreenContent .fai-chun.horizontal:has(.char-wrapper:nth-child(6):last-child) {
+  --char-count: 6;
+}
+#fullscreenContent .fai-chun.horizontal:has(.char-wrapper:nth-child(7):last-child) {
+  --char-count: 7;
+}
+
+/* 3. Modify the main rule to use the variable in a calc() function. */
+#fullscreenContent .fai-chun.horizontal {
+  display: flex;
+  /* The calculated width! */
+  width: calc(var(--char-count) * 13.5%);     
+ }
+        
       #fullscreenContent .fai-chun.horizontal {
         height: 5rem;            /* A generous height for large characters */
         border: 8px solid #facc15;/* The border */
+        max-width: 70rem;
         display: flex;
         align-items: center;
         justify-content: center;
         overflow: hidden;
+        width: calc(var(--char-count) * 13.5%);
       }
       #fullscreenContent .fai-chun.vertical img {
           max-width: 100%;
