--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
                 <div class="picker-container">
                     <label class="background-choice" id="bgColorPickerLabel">
                         🎨
-                        <input type="color" id="bgColorPickerInput" value="#dc2626">
+                        <input type="color" id="bgColorPickerInput" value="#00297B">
                         <div class="checkmark">✓</div>
                     </label>
                 </div>
