--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         transition: background-color 0.2s ease-in-out;
       }
       .generate-button:hover {
-        background-color: #b91c1c;
+        background-color: darkslategrey;
       }
       #posterContainer {
         margin-top: 1.5rem;
