--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
                 <div class="picker-container">
                     <label class="background-choice" id="bgColorPickerLabel">
                         🎨
-                        <input type="color" id="bgColorPickerInput" value="#00297B">
+                        <input type="color" id="bgColorPickerInput" value="#dc2626">
                         <div class="checkmark">✓</div>
                     </label>
                 </div>
@@ -937,7 +937,7 @@
                 <div class="picker-container">
                     <label class="text-choice" id="textColorPickerLabel">
                         🎨
-                        <input type="color" id="textColorPickerInput" value="#FDE047">
+                        <input type="color" id="textColorPickerInput" value="#000000">
                         <div class="checkmark">✓</div>
                     </label>
                 </div>
