--- a/index.html
+++ b/index.html
@@ -637,6 +637,7 @@
       #fullscreenContent .fai-chun.vertical {
         width: 5rem;             /* A good default size for desktop */
         max-width: 90vw;          /* Ensures it never overflows the screen */
+        overflow-y: auto;
       }
 
 #fullscreenContent .fai-chun.horizontal {
